# Swagger.json
@@ -140,6 +140,71 @@
         }
       }
     },
+    "/api/ApprovedPlaylistControler/EditApprovedPlaylist": {
+      "put": {
+        "tags": [
+          "ApprovedPlaylistControler"
+        ],
+        "summary": "Editing existing approved playlist",
+        "requestBody": {
+          "description": "Edited approved playlist",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Playlist"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Playlist"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/Playlist"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/ApprovedPlaylistControler/DeleteApprovedPlaylist/{id}": {
+      "delete": {
+        "tags": [
+          "ApprovedPlaylistControler"
+        ],
+        "summary": "Deleting existing approved playlist",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "description": "The id of the playlist you want to delete",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/Game/CreateGameNewPlaylist": {
       "post": {
         "tags": [
@@ -416,6 +481,31 @@
         }
       }
     },
+    "/api/Game/DeleteGame/{gameId}": {
+      "delete": {
+        "tags": [
+          "Game"
+        ],
+        "summary": "Deleting specific game",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "description": "Game id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/PlayerControler/AddNewPlayerToGame": {
       "post": {
         "tags": [
@@ -438,6 +528,151 @@
             "description": "Player nickname",
             "schema": {
               "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string",
+                  "format": "uuid"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/PlayerControler/GetPlayers/{gameId}": {
+      "get": {
+        "tags": [
+          "PlayerControler"
+        ],
+        "summary": "Getting players from a specific game",
+        "parameters": [
+          {
+            "name": "gameId",
+            "in": "path",
+            "description": "Game id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Player"
+                  }
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Player"
+                  }
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Player"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/PlayerControler/EditPlayer": {
+      "put": {
+        "tags": [
+          "PlayerControler"
+        ],
+        "summary": "Editing player name",
+        "parameters": [
+          {
+            "name": "playerId",
+            "in": "query",
+            "description": "player id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "gameId",
+            "in": "query",
+            "description": "game id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "description": "new name",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/PlayerControler/DeletePlayer": {
+      "delete": {
+        "tags": [
+          "PlayerControler"
+        ],
+        "summary": "Deleting player from game",
+        "parameters": [
+          {
+            "name": "playerId",
+            "in": "query",
+            "description": "Player id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "gameId",
+            "in": "query",
+            "description": "game id",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
             }
           }
         ],
@@ -489,7 +724,7 @@
       }
     },
     "/api/Songs/EditPlaylist": {
-      "post": {
+      "put": {
         "tags": [
           "Songs"
         ],
